--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
         </nav>
         <ul class="list header-contact">
           <li class="item">
-            <a class="link header-contact-link" href="mailto:info@devstudio.com"
-              >
+            <a
+              class="link header-contact-link"
+              href="mailto:info@devstudio.com"
+            >
               <svg class="contact-icon" width="16" height="12">
-                <use href="./images/iconsy.svg#icon-envelope"></use></svg>info@devstudio.com
+                <use href="./images/iconsy.svg#icon-envelope"></use></svg
+              >info@devstudio.com
             </a>
           </li>
           <li class="item">
@@ -68,9 +71,13 @@
       <!--1 блок герой-->
       <section class="hero">
         <div class="ovarlay">
-          <div class="container hero-container">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="hero-button" type="button">Замовити послугу</button>
+          <div class="container">
+            <div class="hero-container">
+              <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+              <button class="hero-button" type="button">
+                Замовити послугу
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -348,8 +355,6 @@
         </div>
       </section>
 
-      <!-- постійні клієнти -->
-
       <!-- Постійні клієнти -->
       <section class="section">
         <div class="container">
@@ -398,7 +403,7 @@
 
     <!--5 блок Підвал-->
     <footer class="footer">
-      <div class="container">
+      <div class="container container-footer">
         <div class="footer-adress-block">
           <a class="logo-footer link" href="./index.html"
             ><span class="logo-color">Web</span>Studio</a
@@ -432,45 +437,39 @@
         </div>
         <!-- підвал-підвал))) -->
         <div class="footer-social">
-                    <p class="footer-text">приєднуйтесь</p>
-                    <ul class="footer-links">
-                
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/iconsy.svg#icon-f_instagram">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/iconsy.svg#icon-f_twitter">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/iconsy.svg#icon-f_facebook">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/iconsy.svg#icon-f_linkedin">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                
-                </div>
-            </div>
-          </footer>
+          <p class="footer-text">приєднуйтесь</p>
+          <ul class="footer-links">
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
