--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,9 @@
           >
           <ul class="list header-list">
             <li class="item">
-              <a class="link header-nav-link" href="./index.html">Студія</a>
+              <a class="link header-nav-link " href="./index.html"
+                >Студія</a
+              >
             </li>
             <li class="item">
               <a class="link header-nav-link current" href="./portfolio.html"
@@ -44,17 +46,21 @@
         </nav>
         <ul class="list header-contact">
           <li class="item">
-            <a class="link header-contact-link" href="mailto:info@devstudio.com"
-              ><svg class="contact-icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use></svg
+            <a
+              class="link header-contact-link"
+              href="mailto:info@devstudio.com"
+            >
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/iconsy.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
           <li class="item">
             <a class="link header-contact-link" href="tel:+380961111111"
               ><svg class="contact-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg>+38 096 111 11 11</a
+                <use href="./images/iconsy.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -84,14 +90,14 @@
           </ul>
 
           <ul class="portfolio-list">
-            <li class="list">
+            <li class="list card-portfolio">
               <img src="./images/page-2/img1.jpg" alt="фото трьох осіб" />
               <div class="portfolio-list-block">
                 <h2 class="portfolio-list-title">Технокряк</h2>
                 <p class="portfolio-list-text">Веб-сайт</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img2.jpg"
                 alt="фото двох гравців у баскетбол"
@@ -105,7 +111,7 @@
                 <p class="portfolio-list-text">Дизайн</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img3.jpg"
                 alt="логотип рибного ресторану"
@@ -117,7 +123,7 @@
                 <p class="portfolio-list-text">Додаток</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img4.jpg"
                 alt="фото навушників"
@@ -129,7 +135,7 @@
                 <p class="portfolio-list-text">Маркетинг</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img5.jpg"
                 alt="зображення двох коробочек"
@@ -141,7 +147,7 @@
                 <p class="portfolio-list-text">Додаток</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img6.jpg"
                 alt="фото монітору"
@@ -153,7 +159,7 @@
                 <p class="portfolio-list-text">Веб-сайт</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img7.jpg"
                 alt="зображення розгорнутої книжки"
@@ -165,7 +171,7 @@
                 <p class="portfolio-list-text">Дизайн</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img8.jpg"
                 alt="ярлик"
@@ -177,7 +183,7 @@
                 <p class="portfolio-list-text">Маркетинг</p>
               </div>
             </li>
-            <li class="list">
+            <li class="list card-portfolio">
               <img
                 src="./images/page-2/img9.jpg"
                 alt="фото рук людини, що тиснуть на клавіши нотбуку"
@@ -196,7 +202,7 @@
 
     <!--5 блок Підвал-->
     <footer class="footer">
-      <div class="container">
+      <div class="container container-footer">
         <div class="footer-adress-block">
           <a class="logo-footer link" href="./index.html"
             ><span class="logo-color">Web</span>Studio</a
@@ -228,48 +234,41 @@
             </ul>
           </address>
         </div>
-         <!-- підвал-підвал))) -->
+        <!-- підвал-підвал))) -->
         <div class="footer-social">
-                    <p class="footer-text">приєднуйтесь</p>
-                    <ul class="footer-links">
-                
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-instagram">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-twitter">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-facebook">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" class="footer-link">
-                                <svg class="footer-icon">
-                                    <use href="./images/icons.svg#icon-linkedin">
-                                    </use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                
-                </div>
-            </div>
-          </footer>
+          <p class="footer-text">приєднуйтесь</p>
+          <ul class="footer-links">
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="footer-link">
+                <svg class="footer-icon">
+                  <use href="./images/iconsy.svg#icon-f_linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
-
