--- a/portfolio.html
+++ b/portfolio.html
@@ -51,14 +51,14 @@
               href="mailto:info@devstudio.com"
             >
               <svg class="contact-icon" width="16" height="12">
-                <use href="./images/iconsy.svg#icon-envelope"></use></svg
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
           <li class="item">
             <a class="link header-contact-link" href="tel:+380961111111"
               ><svg class="contact-icon" width="10" height="16">
-                <use href="./images/iconsy.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -91,109 +91,127 @@
 
           <ul class="portfolio-list">
             <li class="list card-portfolio">
-              <img src="./images/page-2/img1.jpg" alt="фото трьох осіб" />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Технокряк</h2>
-                <p class="portfolio-list-text">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-link"  href="">
+                <img src="./images/page-2/img1.jpg" alt="фото трьох осіб" />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img2.jpg"
-                alt="фото двох гравців у баскетбол"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-list-text">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img2.jpg"
+                  alt="фото двох гравців у баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-list-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img3.jpg"
-                alt="логотип рибного ресторану"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Ресторан Seafood</h2>
-                <p class="portfolio-list-text">Додаток</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img3.jpg"
+                  alt="логотип рибного ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Ресторан Seafood</h2>
+                  <p class="portfolio-list-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img4.jpg"
-                alt="фото навушників"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Проєкт Prime</h2>
-                <p class="portfolio-list-text">Маркетинг</p>
-              </div>
+              <a  href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img4.jpg"
+                  alt="фото навушників"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Проєкт Prime</h2>
+                  <p class="portfolio-list-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img5.jpg"
-                alt="зображення двох коробочек"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Проєкт Boxes</h2>
-                <p class="portfolio-list-text">Додаток</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img5.jpg"
+                  alt="зображення двох коробочек"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Проєкт Boxes</h2>
+                  <p class="portfolio-list-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img6.jpg"
-                alt="фото монітору"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
-                <p class="portfolio-list-text">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img6.jpg"
+                  alt="фото монітору"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img7.jpg"
-                alt="зображення розгорнутої книжки"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Видання Limited Edition</h2>
-                <p class="portfolio-list-text">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img7.jpg"
+                  alt="зображення розгорнутої книжки"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Видання Limited Edition</h2>
+                  <p class="portfolio-list-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img8.jpg"
-                alt="ярлик"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Проєкт LAB</h2>
-                <p class="portfolio-list-text">Маркетинг</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img8.jpg"
+                  alt="ярлик"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Проєкт LAB</h2>
+                  <p class="portfolio-list-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="list card-portfolio">
-              <img
-                src="./images/page-2/img9.jpg"
-                alt="фото рук людини, що тиснуть на клавіши нотбуку"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-list-block">
-                <h2 class="portfolio-list-title">Маркетинг</h2>
-                <p class="portfolio-list-text">Додаток</p>
-              </div>
+              <a href="" class="portfolio-link">
+                <img
+                  src="./images/page-2/img9.jpg"
+                  alt="фото рук людини, що тиснуть на клавіши нотбуку"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-list-block">
+                  <h2 class="portfolio-list-title">Маркетинг</h2>
+                  <p class="portfolio-list-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -241,28 +259,28 @@
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_instagram"></use>
+                  <use href="./images/icons.svg#icon-f_instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_twitter"></use>
+                  <use href="./images/icons.svg#icon-f_twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_facebook"></use>
+                  <use href="./images/icons.svg#icon-f_facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_linkedin"></use>
+                  <use href="./images/icons.svg#icon-f_linkedin"></use>
                 </svg>
               </a>
             </li>
