--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
               href="mailto:info@devstudio.com"
             >
               <svg class="contact-icon" width="16" height="12">
-                <use href="./images/iconsy.svg#icon-envelope"></use></svg
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
           <li class="item">
             <a class="link header-contact-link" href="tel:+380961111111"
               ><svg class="contact-icon" width="10" height="16">
-                <use href="./images/iconsy.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -90,7 +90,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/iconsy.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -102,7 +102,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/iconsy.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -114,7 +114,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/iconsy.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-title">ПЛАНУВАННЯ</h3>
@@ -125,7 +125,7 @@
             <li class="card-features item">
               <div class="icon">
                 <svg class="icon-svg">
-                  <use href="./images/iconsy.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -194,28 +194,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -237,28 +237,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,28 +280,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -323,28 +323,28 @@
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
                       <svg class="social-icon">
-                        <use href="./images/iconsy.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -363,37 +363,37 @@
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/iconsy.svg#icon-group1"></use></svg
+                  <use href="./images/icons.svg#icon-group1"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/iconsy.svg#icon-group2"></use></svg
+                  <use href="./images/icons.svg#icon-group2"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/iconsy.svg#icon-group3"></use></svg
+                  <use href="./images/icons.svg#icon-group3"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/iconsy.svg#icon-group4"></use></svg
+                  <use href="./images/icons.svg#icon-group4"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/iconsy.svg#icon-group5"></use></svg
+                  <use href="./images/icons.svg#icon-group5"></use></svg
               ></a>
             </li>
             <li>
               <a href="" class="client-link">
                 <svg class="client-icon">
-                  <use href="./images/iconsy.svg#icon-group6"></use></svg
+                  <use href="./images/icons.svg#icon-group6"></use></svg
               ></a>
             </li>
           </ul>
@@ -442,28 +442,28 @@
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_instagram"></use>
+                  <use href="./images/icons.svg#icon-f_instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_twitter"></use>
+                  <use href="./images/icons.svg#icon-f_twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_facebook"></use>
+                  <use href="./images/icons.svg#icon-f_facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="footer-link">
                 <svg class="footer-icon">
-                  <use href="./images/iconsy.svg#icon-f_linkedin"></use>
+                  <use href="./images/icons.svg#icon-f_linkedin"></use>
                 </svg>
               </a>
             </li>
